# oxeylyzer

./: .gitignore  Cargo.toml  README.md  config.toml  convert_kbs.py  default.nix  flake.nix  languages_default.cfg  make_release.py  package.json  shell.nix  tempCodeRunnerFile.toml
.cargo/: config.toml
.github/workflows/: build-repl.yml  build-tauri.yml  ci.yml
benches/: generation.rs  languages.rs  util.rs
corpus_configs/custom/: dan-en70-30a.toml
corpus_configs/provided/: 450k.toml  albanian.toml  bokmal.toml  czech.toml  default.toml  default_punct.toml  dutch.toml  dutch_repeat.toml  english_repeat.toml  english_th.toml  esperanto.toml  finnish.toml  finnish_repeat.toml  french.toml  french_qu.toml  german.toml  hungarian.toml  italian.toml  korean.toml  nynorsk.toml  polish.toml  russian.toml  spanish.toml  swedish.toml  swiss.toml  welsh.toml  welsh_pure.toml
data/test/: bokmal.json  hebrew.json
language_data/: albanian.json  dutch.json  english.json
layouts/: apt.kb  aptv3.kb  au_pinky.kb  better sertain.kb  crest.kb  doerak2.kb  halmak.kb  hwat.kb  inroll_dutch.kb  jonimak.kb  mommymak2.kb  mtgap30.kb  neat.kb  nsrt2.kb  oxey10.kb  oxey4.kb  qgmlwy.kb  qwerty.kb  redir.kb  rntd.kb  rntd_swap.kb  rtndfix.kb  semimak_jq.kb  sfb.kb  sfb_dutch.kb  snug.kb  sus.kb  vitrimak.kb  vitrimak_ortho.kb  workman.kb  wreath_like.kb  wtf.kb  wtf2.kb  yummy.kb
oxeylyzer-core/: Cargo.toml  README.md  config.toml
oxeylyzer-core/src/: analyzer_data.rs  cached_layout.rs  char_mapping.rs  corpus_cleaner.rs  data.rs  fast_layout.rs  generate.rs  generate_annealing.rs  language_data.rs  languages_cfg.rs  layout.rs  lib.rs  load_text.rs  o2_char_mapping.rs  translation.rs  trigram_patterns.rs  utility.rs  weights.rs
oxeylyzer-core/src/generate/: desshaw.rs  iterative.rs  michaelll.rs  obsolete.rs
oxeylyzer-core/static/language_data/: english.json  test.json
oxeylyzer-core/static/layouts/: gust.dof
oxeylyzer-core/static/text/test/: test.txt
oxeylyzer-repl/: Cargo.toml  config.toml  languages_default.cfg
oxeylyzer-repl/src/: commands.rs  corpus_transposition.rs  display.rs  flags.rs  lib.rs  main.rs  repl.rs  tui.rs
oxeylyzer-tauri/: .gitignore  flake.nix  index.html  package.json  vite.config.ts
oxeylyzer-tauri/src/: App.tsx  index.tsx
oxeylyzer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
oxeylyzer-tauri/src-tauri/src/: lib.rs  main.rs
src/: analysis.rs  analyze.rs  cli  commands.rs  corpus_transposition.rs  generate.rs  generate_cached.rs  language_data.rs  languages_cfg.rs  layout.rs  lib.rs  load_text.rs  main.rs  ngrams.rs  repl.rs  translation.rs  trigram_patterns.rs  tui.rs  utility.rs  weights.rs
src/generate/: michaelll.rs  obsolete.rs
static/corpus_configs/custom/: dan-en70-30.toml  english_polish_special.toml  polish_special_key.toml  polish_special_key2.toml
static/corpus_configs/provided/: 10k.toml  1k.toml  25k.toml  450k.toml  5k.toml  akl.toml  albanian.toml  bokmal.toml  czech.toml  danish.toml  default.toml  default_punct.toml  dutch.toml  dutch_en.toml  dutch_repeat.toml  e200.toml  english.toml  english2.toml  english_repeat.toml  english_th.toml  esperanto.toml  finnish.toml  finnish_repeat.toml  french.toml  french_qu.toml  german.toml  german_deadkey.toml  hebrew.toml  hungarian.toml  indonesian.toml  italian.toml  korean.toml  latvian.toml  malay.toml  monkeyracer.toml  mt.toml  nynorsk.toml  pinyin.toml  pinyin_an.toml  polish.toml  (+17 more)
static/langdat/: dutch.json
static/language_data/: 10k.json  1k.json  25k.json  450k.json  5k.json  akl.json  al-en_40-60.json  albanian.json  bokmal.json  combine.py  czech.json  dan-en70-30.json  dan-en70-30a.json  danish.json  du-en-hu_45-45-10.json  du-en_20-80.json  du-en_50-50.json  du-en_70-30.json  dur-enr_70-30.json  dutch.json  dutch_en.json  dutch_repeat.json  dutch_repeat_en.json  e200.json  en-it75-25.json  en-po_70-30.json  english.json  english2.json  english_repeat.json  english_th.json  esperanto.json  finnish.json  finnish_repeat.json  french.json  french_qu.json  frq-en_50-50.json  ger-en60-40.json  ger-en_20-80.json  german.json  german_deadkey.json  (+45 more)
static/language_data_raw/: 450k.json  czech.json  dutch_en.json  e200.json  english.json  esperanto.json  german.json  hebrew.json  latvian.json  luxembourgish.json  malay.json  monkeyracer.json  mt.json  oxey_code2.json  oxey_discord2.json  pinyin.json  polish.json  polish_special_key2.json  portuguese.json  shai.json  spanish.json  toki_pona.json  tr.json  turkish.json  ukranian.json  vietnamese.json
static/layouts/: QWSDFY.kb  better_sind.kb  bokmal1.kb  bokmal3.kb  bone.kb  colemak_dhv.kb  colemak_qi;x.kb  czech3.kb  czech5.kb  doerak.kb  french2.kb  german2.kb  hands_correct.kb  hrast.kb  indo_yum.kb  kenilopa.kb  kramak2.kb  nerth_wzx.kb  norman.kb  optimot.kb  optimot_ej.kb  phonkie.kb  rolll.kb  ronaldo.kb  ronaldo_more_redir.kb  s-roll.kb  tokimak.kb  trash.kb  trendei.kb  whorf_nsrt.kb  workman2_dev2.kb  wreath.kb  wtf.kb
static/layouts/1k/: _test.dof  _test.kb  aptv4.kb  blickensderfer.dof  boo.dof  celestial.kb  colemak_dn.kb  colemaq.kb  crustmak.dof  dof.dof  dvarf.dof  fire.dof  fire_m.dof  flame.dof  flare.dof  halmak.dof  hands_down.dof  heart.dof  hyperroll.dof  isrt.dof  jcuken.dof  jcuken.kb  listen.dof  listen.kb  megamak3.kb  mtgapt.dof  nerps_oa.dof  nerts.dof  noctum2.dof  nstd1.dof  nstd1.kb  nstr_apsu.kb  phonkie.dof  radish.dof  rolll.dof  rtna.dof  rtna.kb  sent.dof  sind.dof  snrt2.kb  (+12 more)
static/layouts/akl/: _test.dof  _test.kb  noctum.dof  noctum.kb  rtns.dof  sntd1.dof
static/layouts/al-en_40-60/: _test.dof  dof.dof
static/layouts/albanian/: _test.dof  _test.kb  albanian6.dof  albanian6.kb  albanian8.dof  albanian8.kb  dof.dof  iëek1.dof  jonimak.dof  jonimak.kb  nsrt1.dof  nsrt2.dof  nsrt3.dof  nsrt4.dof  ntrm1.dof  ntrm1.kb  ntrm2.dof  ntrm2.kb  rtnm1.dof  snrt1.dof  snrt1.kb  snrt2.dof  snrt2.kb  srnt1.dof  srnt1.kb  srnt2.dof  srnt3.dof  srnt3.kb  worst_possible.dof
static/layouts/bokmal/: bokmal1.dof  bokmal1.kb  bokmal2.dof  bokmal2.kb  (+18 more)
static/text/: README.md
tests/: tests.rs
(+1072 files in other folders)
