[package]
name = "oxeylyzer"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2024"

[workspace]
members = [
    "oxeylyzer-core",
    "oxeylyzer-repl"
]

[workspace.dependencies]
indexmap = { version = "2.2.6" }
itertools = "0.13.0"
libdof = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"

[dependencies]
oxeylyzer-core = { path = "./oxeylyzer-core" }
oxeylyzer-repl = { path = "./oxeylyzer-repl" }

[dev-dependencies]
diol = { version = "0.8.3", default-features = false }

[profile.release]
lto = "fat"

[[bench]]
name = "generation"
harness = false

[[bin]]
name = "oxeylyzer"
path = "./oxeylyzer-repl/src/bin/main.rs"
