[package]
name = "oxeylyzer"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2024"

[workspace]
members = [
    "oxeylyzer-core",
    "oxeylyzer-repl",
    "oxeylyzer-tauri/src-tauri"
]

[workspace.dependencies]
anyhow = "1.0"
indexmap = { version = "2.13" }
itertools = "0.14"
libdof = "0.24"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16"
thiserror = "2.0"
toml = "0.9"

[dependencies]
oxeylyzer-core = { path = "./oxeylyzer-core" }
oxeylyzer-repl = { path = "./oxeylyzer-repl" }

[dev-dependencies]
diol = { version = "0.13.1" }

[profile.release]
lto = "fat"

[[bench]]
name = "generation"
harness = false

[[bin]]
name = "oxeylyzer"
path = "./oxeylyzer-repl/src/bin/main.rs"
