[package]
name = "oxeylyzer-core"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2024"

[dependencies]
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanorand = "0.7.0"
rayon = "1.5.1"
file-chunker = "0.1.1"
anyhow = "1.0.57"
indexmap = { workspace = true, features = ["serde"] }
toml = { workspace = true }
smartstring = { git = "https://github.com/O-X-E-Y/smartstring", features = ["serde"] }
arrayvec = "0.7.2"
once_cell = "1.16.0"
ansi_rgb = { git = "https://github.com/O-X-E-Y/ansi_rgb" }
ahash = { version = "0.8.11", features = ["serde"] }
libdof = { workspace = true }

[dev-dependencies]
time_this = "0"
approx = "0"
