[package]
name = "oxeylyzer-core"
version = "0.1.0"
authors = ["o-x-e-y <lucoerlemans37@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
description = "Core library for Oxeylyzer, a keyboard layout analyzer"
repository = "https://github.com/o-x-e-y/oxeylyzer"
categories = ["algorithms", "data-structures", "mathematics"]
documentation = "https://docs.rs/oxeylyzer-core"

[dependencies]
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanorand = "0.7.0"
rayon = "1.5.1"
file-chunker = "0.1.1"
anyhow = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
toml = { workspace = true }
ahash = { version = "0.8.11", features = ["serde"] }
libdof = { workspace = true }
sliding_window_alt = "0.1.2"
thiserror = { workspace = true }
serde_with = { workspace = true }
fxhash = "0.2"
num_cpus = "1.17"

[dev-dependencies]
time_this = "0"
approx = "0"
fancy-regex = "0.17.0"
once_cell = { workspace = true }
