[package]
name = "oxeylyzer-repl"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxeylyzer-core = { path = "../oxeylyzer-core" }
shlex = "1.1.0"
indicatif = { version = "0.17.1", features = ["rayon"] }
ansi_rgb = { git = "https://github.com/O-X-E-Y/ansi_rgb" }
indexmap = "1.9.1"
getargs = "0.5.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
glob = "0.3.0"
toml = "0.5.9"
itertools = "0.10.3"