[package]
name = "oxeylyzer-repl"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2021"

[dependencies]
oxeylyzer-core = { path = "../oxeylyzer-core" }
shlex = "1.1.0"
indicatif = { version = "0.17.1", features = ["rayon"] }
ansi_rgb = { git = "https://github.com/O-X-E-Y/ansi_rgb" }
indexmap = "2.2.6"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
glob = "0.3.0"
toml = "0.8.12"
itertools = "0.12.1"
xflags = { git = "https://github.com/O-X-E-Y/xflags/" }