[package]
name = "oxeylyzer-repl"
version = "0.1.0"
authors = ["O_X_E_Y <lucoerlemans37@gmail.com>"]
edition = "2024"

[dependencies]
oxeylyzer-core = { path = "../oxeylyzer-core" }
shlex = "1.3"
indicatif = { version = "0.18", features = ["rayon"] }
ansi_rgb = { git = "https://github.com/O-X-E-Y/ansi_rgb" }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = "0.3"
toml = { workspace = true }
itertools = { workspace = true }
xflags = { git = "https://github.com/O-X-E-Y/xflags/" }
libdof = { workspace = true }
