[package]
name = "oxeylyzer-tauri"
version = "0.1.0"
description = "A web frontend for Oxeylyzer, a keyboard layout analyzer"
authors = ["o-x-e-y <lucoerlemans37@gmail.com>"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oxeylyzer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
